--- a/CommunicationTest WatchKit App/Base.lproj/Interface.storyboard
+++ b/CommunicationTest WatchKit App/Base.lproj/Interface.storyboard
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="13771" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
-    <device id="watch38" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="15400" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AgC-eL-Hgc">
+    <device id="watch38"/>
     <dependencies>
         <deployment identifier="watchOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="13756"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="15400"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="Helvetica.ttc">
-            <string>Helvetica-Bold</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
                 <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="CommunicationTest_WatchKit_App" customModuleProvider="target">
                     <items>
+                        <label width="136" height="20" alignment="left" text="Label" numberOfLines="2" id="PMJ-75-bao">
+                            <fontDescription key="font" name="Helvetica-Bold" family="Helvetica" pointSize="13"/>
+                        </label>
                         <group width="1" alignment="left" id="PEo-iJ-VR0">
                             <items>
-                                <button alignment="left" title="Push " id="fzB-f5-y2S">
+                                <button width="79" alignment="left" title="Push " id="fzB-f5-y2S">
                                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" type="system" pointSize="10"/>
                                     <connections>
                                         <action selector="buttonPressed" destination="AgC-eL-Hgc" id="EFk-bs-nx7"/>
                                     </connections>
                                 </button>
-                                <label height="20" alignment="left" text="Label" numberOfLines="2" id="PMJ-75-bao">
-                                    <fontDescription key="font" name="Helvetica-Bold" family="Helvetica" pointSize="13"/>
-                                </label>
                             </items>
                         </group>
                         <imageView width="47" height="47" alignment="center" image="pokeball" id="RxI-YZ-AgM"/>
@@ -81,7 +74,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="555" y="31.5"/>
+            <point key="canvasLocation" x="444" y="78.5"/>
         </scene>
         <!--Screen2 Sample-->
         <scene sceneID="rSw-iR-0SS">
@@ -110,7 +103,10 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="562" y="382"/>
+            <point key="canvasLocation" x="662" y="78"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pokeball" width="64" height="64"/>
+    </resources>
 </document>
