--- a/CommunicationTest WatchKit App/Base.lproj/Interface.storyboard
+++ b/CommunicationTest WatchKit App/Base.lproj/Interface.storyboard
@@ -17,7 +17,7 @@
                         </label>
                         <group width="1" alignment="left" id="PEo-iJ-VR0">
                             <items>
-                                <button width="79" alignment="left" title="Push " id="fzB-f5-y2S">
+                                <button width="136" alignment="left" title="Push " id="fzB-f5-y2S">
                                     <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="font" type="system" pointSize="10"/>
                                     <connections>
@@ -37,6 +37,7 @@
                                     <fontDescription key="font" type="system" pointSize="13"/>
                                     <connections>
                                         <action selector="nameButtonPressed" destination="AgC-eL-Hgc" id="eHT-Ns-0Sz"/>
+                                        <segue destination="TKJ-vR-82D" kind="push" id="XH4-wG-834"/>
                                     </connections>
                                 </button>
                                 <button alignment="center" title="S" id="kff-c9-AJG">
@@ -93,7 +94,7 @@
                             <color key="titleColor" red="0.31372549020000001" green="0.27450980390000002" blue="0.34509803919999998" alpha="1" colorSpace="deviceRGB"/>
                             <color key="backgroundColor" red="1" green="0.9385274106" blue="0.23414020229999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
-                                <action selector="startButtonPressed" destination="TKJ-vR-82D" id="yIB-Vl-PdC"/>
+                                <action selector="startButtonPressed" destination="TKJ-vR-82D" id="zmK-P9-fnW"/>
                             </connections>
                         </button>
                     </items>
@@ -103,7 +104,7 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="662" y="78"/>
+            <point key="canvasLocation" x="714" y="78"/>
         </scene>
     </scenes>
     <resources>
